added visual effect

--- a/index.html
+++ b/index.html
@@ -57,39 +57,40 @@
 		<audio id = "the_moving_stairsv" src = "assets/audio/victory_music/the_moving_stairs.mp3"> </audio>
 		<audio id = "the_quidditch_matchv" src = "assets/audio/victory_music/the_quidditch_match.mp3"> </audio>
 
-		<header>
-			<h1>Harry Potter Hangman</h1>
-		</header>
-		<div class="main_game">
-			<p>Press any key to start playing</p>
+		<div class="main">
+			<img class="undesirable invisible" src="assets/images/Undesirable.jpg" alt = "undesirable">
+			<header>
+				<h1>Harry Potter Hangman</h1>
+			</header>
+			<div class="main_game">
+				<p>Press any key to start playing</p>
+				<div class = "col-xs-2">
+				</div>
 			
-			<div class = "col-xs-2">
-			</div>
-			
-			<div class = "left_box col-xs-4">
-			<p>Incorrect Letters Guessed
-			<br>
-			<span id="letters_guessed"></span></p>
-			<br>
-			<p>Number of Guesses Remaining
-			<br>
-			<span id="guesses_remaining"></span></p>
-			<br>
-			<p>Wins
-			<br>
-			<span id="wins"></span></p>
-			<br>
-			</div>
-			
-			<div class = "right_box col-xs-4">
-				<p>Current Word 
-				<br>
-				<span id="current_word"></span></p> 
-				<br>
-			</div>
+				<div class = "left_box col-xs-4">
+					<p>Incorrect Letters Guessed
+					<br>
+					<span id="letters_guessed"></span></p>
+					<br>
+					<p>Number of Guesses Remaining
+					<br>
+					<span id="guesses_remaining"></span></p>
+					<br>
+					<p>Wins
+					<br>
+					<span id="wins"></span></p>
+					<br>
+				</div>
 
-			<div class = "col-xs-2">
-			</div>
+				<div class = "right_box col-xs-4">
+					<p>Current Word 
+					<br>
+					<span id="current_word"></span></p> 
+					<br>
+				</div>
 
+				<div class = "col-xs-2">
+				</div>
+			</div>
 		</div>
 	</body>
