made correct letter transition smoother

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
 		<div class="main">
 			<img class="undesirable invisible" src="assets/images/Undesirable.jpg" alt = "undesirable">
+			<!-- Footprint image that I couldn't animate 
+				<img id = "footprint" class = "rotate0" src="assets/images/individual_footprint.png" alt = "footprint"> -->
 			<header>
 				<h1>Harry Potter Hangman</h1>
 			</header>
