cleaned up program and added README

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		<meta name="viewport" content="width=device-width, initial scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
 	<body>
@@ -65,7 +65,7 @@
 				<h1>Harry Potter Hangman</h1>
 			</header>
 			<div class="main_game">
-				<p>Press any key to start playing</p>
+				<p id = "command">Press any key to start playing</p>
 				<div class = "col-xs-2">
 				</div>
 			
